# code-orbit

./: .code-orbit-history  .gitignore  README.md  TOKEN_COUNTING.md  cliff.toml  config.yaml  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  release.yml
.github/workflows/: release.yml  test.yml
agent/: config.py  constants.py  context.py  embeddings.py  events.py  llm.py  patcher.py  rendering.py  schemas.py  token_counter.py  utils.py
agent/chat/: __init__.py  adapters.py  errors.py  factory.py  orchestrator.py  types.py
agent/chat/providers/: __init__.py  openai.py
agent/embeddings/: __init__.py  adapters.py  cache.py  chunking.py  client.py  discovery.py  factory.py  index.py  store.py  types.py
agent/embeddings/providers/: __init__.py  openai.py
api/: __init__.py  types.py
docs/: index.html  styles.css
tests/: test_api_types.py  test_chat_adapters.py  test_config.py  test_context.py  test_embedding_adapters.py  test_embeddings.py  test_events.py  test_main.py  test_patcher.py  test_token_counter.py  test_workflow_core.py
workflow/: __init__.py  _state.py  context.py  core.py  editing.py  errors.py  execution.py  hooks.py  output.py  planning.py
